<resources>
    <string name="app_name">Star Wars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aceptar">Aceptar</string>
    <string name="people">People</string>
    <string name="tittle_message">Tittle message</string>
    <string name="cancelar_dialog">Cancelar</string>
    <string name="body_message">Body message</string>
    <string name="error_service">Servicio no disponible, intente más tarde.</string>
    <string name="verifica_conexion">Verifica tu conexion de internet</string>
    <string name="users">Users</string>
    <string name="nombre">Nombre:</string>
    <string name="correo">Correo:</string>
    <string name="n_mero">Número:</string>
    <string name="id">Id:</string>
    <string name="empty">***************</string>
    <string name="t_tulo">Título</string>
    <string name="yoda">Yoda</string>
    <string name="mammal">mammal</string>
    <string name="character">characters</string>
    <string name="flims">Flims</string>
    <string name="planets">Planets </string>
    <string name="species">Species</string>
    <string name="startships">Starships</string>
    <string name="vehicles">Vehicles</string>
    <string name="luke_skywalker">Luke Skywalker</string>
    <string name="birth_year">Birth Year</string>
    <string name="height">Height</string>
    <string name="hair_color">Hair Color:</string>
    <string name="homeworld">Homeworld:</string>
    <string name="gender">Gender:</string>
    <string name="mass">Mass:</string>
    <string name="skin_color">Skin Color</string>
    <string name="a_new_hope">A New Hope</string>
    <string name="_4">4</string>
    <string name="estreno_1977_05_25">Estreno: 1977-05-25</string>
    <string name="detalle">Detalle</string>
    <string name="characters">Characters</string>
    <string name="climate_arid">climate:  arid</string>
    <string name="terrain_grasslands_mountains">terrain:  grasslands, mountains</string>
    <string name="population">Population:</string>
    <string name="climate">Climate:</string>
    <string name="terrain">Terrain:</string>
    <string name="_200000">200000</string>
    <string name="arid">arid</string>
    <string name="desert">desert</string>
    <string name="_1">1</string>
    <string name="episode">Episode</string>
    <string name="premiere">Premiere</string>
    <string name="_1977_05_25">1977-05-25</string>
    <string name="model">Model:</string>
    <string name="cr90_corvette">CR90 corvette</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="cost">Cost:</string>
    <string name="_3500000">3500000</string>
    <string name="corellian_engineering_corporation">Corellian Engineering Corporation</string>
    <string name="title">Title:</string>
    <string name="episode_">Episode:</string>
    <string name="producer">Producer</string>
    <string name="release_date">Release date</string>
    <string name="gary_kurtz_rick_mccallum">Gary Kurtz, Rick McCallum</string>
    <string name="geonosis">Geonosis</string>
    <string name="temperate_arid">temperate, arid</string>
    <string name="name">Name:</string>
    <string name="_0_9_standard">0.9 standard</string>
    <string name="_100000000000">100000000000</string>
    <string name="gravity">Gravity:</string>
    <string name="neimodian">Neimodian</string>
    <string name="classification">Classification:</string>
    <string name="unknown">Unknown</string>
    <string name="grey_green">grey, green</string>
    <string name="skin_colors">Skin Colors:</string>
    <string name="average_lifespan">Average Lifespan:</string>
    <string name="death_star">Death Star</string>
    <string name="ds_1_orbital_battle_station">DS-1 Orbital Battle Station</string>
    <string name="imperial_department_of_military_research_sienar_fleet_systems">Imperial Department of Military Research, Sienar Fleet Systems</string>
    <string name="max_atmosphering_speed">Max Atmosphering Speed:</string>
    <string name="_950">950</string>
    <string name="sand_crawler">Sand Crawler</string>
    <string name="corellia_mining_corporation">Corellia Mining Corporation</string>
    <string name="_30">30</string>
    <string name="consumables">Consumables:</string>
    <string name="_2_months">2 months</string>
    <string name="anakin_skywalker">Anakin Skywalker</string>
    <string name="height_">Height:</string>
    <string name="_188">188</string>
    <string name="male">male</string>
    <string name="blond">blond</string>
    <string name="_84">84</string>
    <string name="fair">fair</string>
    <string name="retry">Reintentar</string>
    <string name="detail">Detail</string>
    <string name="strFetchingDataFromServer">Fetching data from server</string>
</resources>