<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/startwars" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/yoda"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <TextView
        android:id="@+id/population_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/population"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/climate_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/climate"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/population_label"
        app:layout_constraintStart_toStartOf="@+id/population_label"
        app:layout_constraintTop_toBottomOf="@+id/population_label" />

    <TextView
        android:id="@+id/terrain_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terrain"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/climate_label"
        app:layout_constraintStart_toStartOf="@+id/climate_label"
        app:layout_constraintTop_toBottomOf="@+id/climate_label" />

    <TextView
        android:id="@+id/tv_population"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/_200000"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/population_label"
        app:layout_constraintTop_toTopOf="@+id/population_label" />

    <TextView
        android:id="@+id/tv_climate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/arid"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_population"
        app:layout_constraintStart_toStartOf="@+id/tv_population"
        app:layout_constraintTop_toBottomOf="@+id/tv_population" />

    <TextView
        android:id="@+id/tv_terrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/desert"
        app:layout_constraintEnd_toEndOf="@+id/tv_climate"
        app:layout_constraintStart_toStartOf="@+id/tv_climate"
        app:layout_constraintTop_toBottomOf="@+id/tv_climate" />
</androidx.constraintlayout.widget.ConstraintLayout>